packages/taquito-michel-codec/test/contracts_012/ill_typed/view_toplevel_dupable_type_output.tz
parameter nat;
storage nat;
code { CAR ; NIL operation ; PAIR } ;
view "dup" address (ticket nat) { DROP; PUSH nat 1; PUSH nat 1 ; TICKET } ;
